Refactor CRUD project architecture --remove writerRecords --remove writerId from Post --restore Writer -> List<Post> relations --simplify entity relations --improve project structure